force-app/main/default/objects/Candidate__c/Candidate__c.object-meta.xml
<CustomObject>
    <label>Candidate</label>
    <nameField>
        <displayFormat>CAN-{0000}</displayFormat>
        <label>Candidate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>