force-app/main/default/objects/Candidate__c/fields/Cand_Status_Review__c.field-meta.xml
<CustomField>
    <fullName>Cand_Status_Review__c</fullName>
    <label>Cand Status Review</label>
    <length>50</length>
    <type>Text</type>
</CustomField>