force-app/main/default/objects/Candidate__c/fields/Candidate_Status__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Status__c</fullName>
    <formula>IF(
  ISBLANK(Review_Stage__c),
  &quot;No Stage Selected&quot;,
  IF(
    OR(
      Review_Stage__c = &quot;Rejected&quot;,
      AND(
        Review_Stage__c = &quot;Offered&quot;,
        OR(
          Cand_Status_Review__c = &quot;Backout&quot;,
          Cand_Status_Review__c = &quot;Withdraw&quot;
        )
      )
    ),
    IMAGE(&quot;/resource/Red_Flag&quot;, &quot;Red&quot;, 30, 30) &amp; &quot; - &quot; &amp; Review_Stage__c &amp;
      IF(Review_Stage__c = &quot;Offered&quot;, &quot; (&quot; &amp; Cand_Status_Review__c &amp; &quot;)&quot;, &quot;&quot;),
    
    IF(
      OR(
        Review_Stage__c = &quot;Shortlisted&quot;,
        AND(
          Review_Stage__c = &quot;Offered&quot;,
          Cand_Status_Review__c = &quot;Joined&quot;
        )
      ),
      IMAGE(&quot;/resource/Green_Flag&quot;, &quot;Green&quot;, 30, 30) &amp; &quot; - &quot; &amp; Review_Stage__c &amp;
        IF(Review_Stage__c = &quot;Offered&quot;, &quot; (&quot; &amp; Cand_Status_Review__c &amp; &quot;)&quot;, &quot;&quot;),
      
      IMAGE(&quot;/resource/Yellow_Flag&quot;, &quot;Yellow&quot;, 30, 30) &amp; &quot; - &quot; &amp; Review_Stage__c
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>test</inlineHelpText>
    <label>Candidate Status</label>
    <type>Text</type>
</CustomField>