force-app/main/default/objects/Candidate__c/fields/Expected_CTC__c.field-meta.xml
<CustomField>
    <fullName>Expected_CTC__c</fullName>
    <label>Expected CTC</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>