force-app/main/default/objects/Candidate__c/fields/Review_Stage__c.field-meta.xml
<CustomField>
    <fullName>Review_Stage__c</fullName>
    <label>Review Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>