force-app/main/default/objects/Candidate__c/fields/Upload_CV__c.field-meta.xml
<CustomField>
    <fullName>Upload_CV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload CV</label>
    <type>Checkbox</type>
</CustomField>