force-app/main/default/objects/Candidate__c/fields/Year_of_Graduation__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Graduation__c</fullName>
    <label>Year of Graduation</label>
    <type>Date</type>
</CustomField>