force-app/main/default/objects/Candidate__c/fields/Your_Qualification_if_not_listed__c.field-meta.xml
<CustomField>
    <fullName>Your_Qualification_if_not_listed__c</fullName>
    <label>Your Qualification (if not listed)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>