force-app/main/default/objects/Candidate__c/validationRules/Require_Qualification_When_Education_Oth.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Qualification_When_Education_Oth</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Education__c, &quot;Other&quot;),
  ISBLANK(Your_Qualification_if_not_listed__c)  
)</errorConditionFormula>
    <errorMessage>please fill your qualification</errorMessage>
</ValidationRule>