force-app/main/default/objects/Candidate__c/listViews/All_Candidates.listView-meta.xml
<ListView>
    <fullName>All_Candidates</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Candidate_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Candidates</label>
</ListView>